# inncabs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.rb  cmake_command_example  color.rb  eval.rb  eval_to_dat.rb  os.rb  results.rb  results_A.rb  results_parec.rb  run.rb  run_hpx.rb  run_std.rb
alignment/: CMakeLists.txt  alignment.cpp  alignment.h  globals.h  param.h  sequence.h
fft/: CMakeLists.txt  fft.cpp  fft.h
fib/: CMakeLists.txt  fib.cpp  fib_wrapped.cpp
floorplan/: CMakeLists.txt  floorplan.cpp  floorplan.h
health/: CMakeLists.txt  health.cpp  health.h
include/: inncabs.h  inncabs_wrapped.h
intersim/: CMakeLists.txt  intersim.cpp
nqueens/: CMakeLists.txt  nqueens.cpp
pyramids/: CMakeLists.txt  pyramids.cpp  pyramids.h
qap/: CMakeLists.txt  qap.cpp  qap.h
results/: results_2014-09.csv  results_async.csv  results_async.rb  results_cilk.csv  results_parec.csv
round/: CMakeLists.txt  round.cpp
sort/: CMakeLists.txt  sort.cpp  sort.h
sparselu/: CMakeLists.txt  sparselu.cpp  sparselu.h
strassen/: CMakeLists.txt  strassen.cpp  strassen.h
uts/: CMakeLists.txt  brg_sha1.h  brg_types.h  uts.cpp  uts.h
